# UtecBots

./: .gitignore  README.md  app.py  pyproject.toml  tmp.js
AWS/Lambdas/: CreateBot_test.json
Credentials/Enrique/.wwebjs_auth/session/: DevToolsActivePort
Credentials/Enrique/.wwebjs_auth/session/Default/: QuotaManager  QuotaManager-journal
Credentials/Enrique/.wwebjs_auth/session/Default/Cache/Cache_Data/: 01580e26eb6101cf_0  0188102f722c4550_0  044f997df4f47cbb_0  053dd46c7d5d0b50_0  0699a04436fe6987_0  09969df9c56ce3e3_0  0fba2552f158c20a_0  119296fe1ad1bdb1_0  (+185 more)
Credentials/Enrique/.wwebjs_auth/session/Default/GPUCache/: index
Credentials/Enrique/.wwebjs_auth/session/Default/Platform Notifications/: LOG
Credentials/Enrique/.wwebjs_auth/session/Default/Session Storage/: LOG
Credentials/LE/.wwebjs_auth/session/: DevToolsActivePort
Credentials/LE/.wwebjs_auth/session/Default/: QuotaManager  QuotaManager-journal
Credentials/LE/.wwebjs_auth/session/Default/GPUCache/: index
Credentials/LE/.wwebjs_auth/session/Default/Platform Notifications/: LOG  LOG.old
Credentials/LE/.wwebjs_auth/session/Default/Session Storage/: LOG  LOG.old
README/: UtecBots.drawio
tests/unit/: test_utec_bots_stack.py
utec_bots/: utec_bots_stack.py
vue-project/: .gitignore
vue-project/AWS/Lambdas/: CreateBot.py  GetBots.py  LoginUser.py  RegisterUser.py  RegisterUser_test.json  SearchBot.py
vue-project/src/: App copy.vue  App.vue
vue-project/src/components/: Bots.vue  Login.vue  Maker.vue  Menu-info.vue  Menu.vue  Register.vue
vue-project/src/router/: index.js
(+615 files in other folders)
